Minor changes to ExpTree.
- In ExpTree, made the embedded treeview public to change it from C#.
- Cosmetics: increase vertical spacing, remove lines, remove border, etc.

--- a/Kinovea.FileBrowser/UserInterface/FileBrowserUserInterface.resx
+++ b/Kinovea.FileBrowser/UserInterface/FileBrowserUserInterface.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC4
-        BwAAAk1TRnQBSQFMAwEBAAEgAQIBIAECARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        BwAAAk1TRnQBSQFMAwEBAAEoAQIBKAECARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
         AUADAAEQAwABAQEAAQgGAAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
         AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
         AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
@@ -171,79 +171,78 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAE
-        EgAAAk1TRnQBSQFMAgEBBAEAASgBAgEoAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADI
+        EQAAAk1TRnQBSQFMAgEBBAEAATABAgEwAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8ARgADGQQjATMDIwEz
-        AyMBMwMjATMDIwEzAxkBIwwAAjgBOgFbAwYBBxgAAwYBBwI4AToBW7AAAVkCWgHAATYBlAHQAf8BNQGS
-        Ac8B/wE1AZIBzgH/ATQBkgHPAf8BNAGUAdAB/wFZAloBwAwAAVYBZwGBAcgBUQFxAacB7AE9AT4BQAFn
-        AwMBBAgABAICNgE3AVYBUQFvAaMB6QFWAWUBgAHHFAADMAFLA1wByQNbAegDWwHoA1sB6ANbAegDWwHo
-        A1sB6ANbAegDWwHoA1wByQMwAUtsAAExAZMB0QH/AakB+QL/AY8B8AL/AY8B7wL/AY0B8AL/AdID/wE0
-        AZQB0AH/DAABUAFWAV8BnAFpAZUB0wH/AVwBfwG5AfQBVAFxAZ4B5gI3ATkBWQE2ATcBOAFYAVMBbgGa
-        AeMBXAF+AbYB8gFpAZUB0wH/AVABVgFfAZwUAANZAcADSQH2AyEB/wMgAf8DIAH/AyAB/wMgAf8DIAH/
-        AyAB/wMhAf8DSQH2A1kBwFgAAyMBMwMjATMDIwEzAyMBMwMjATMBKQGQAdEB/wG3AfMC/wFtAeAB/QH/
-        AW0B4AH9Af8BbAHgAf4B/wHaAf4C/wExAZIBzwH/DAABPgE/AUEBaQFqAY0BwgH1AaMBzgL/AYwBtgHt
-        Af8BWwF/AbUB8wFbAX8BtQHzAYsBtgHtAf8BowHOAv8BagGNAcIB9QE+AT8BQQFpFAADWwHQAw8B/wMF
-        Af8DBQH/AwUB/wMFAf8DBQH/AwUB/wMFAf8DCgH/AyQB/wNbAdAIAAEZAhgBHwGFAXABYAHHAZoBeQFf
-        AfwBnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BmgF5AV8B/AGE
-        AW8BYAHGAhgBFwEeDAABMAEuASwBPhAAAY0CjAH/AY0CjAH/AY0CjAH/AY0CjAH/AY0CjAH/ASYBjwHS
-        Af8BzgH3Av8BtQHuAf4B/wHbAfkC/wHdAfsC/wHiA/8BMwGUAdAB/wwAASkCKgE+AVoBfAGvAfABowHO
-        Av8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BWgF8Aa8B8AEpAioBPhQAA1IBoAHBArUB/wHr
-        AtsB/wHrAtsB/wHrAtsB/wHrAtsB/wHrAtsB/wHrAtsB/wHrAtsB/wHBArUB/wMlAf8DWwHKCAABhgFw
-        AWEByAG+AagBiwH8Ad8B0wG4Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
-        AeAB1QG6Af8B3wHTAbgB/wG9AaUBigH8AYUBcAFgAccEAAErASkBKAE3AYMBbwFgAcABnAF4AV4B/xAA
-        AY0CjAH/EAABKgGSAdMB/wHcAf0C/wHaAfsC/wEqAY0BzQH/AS8BkQHOAf8BMwGUAdAB/wNVAa4MAAMR
-        ARYBTwF1AbQB+AGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wFPAXUBtAH4AxEBFhQA
-        A0IBdAHkAtgB/wHjAtcB/wHjAtcB/wHjAtcB/wHjAtcB/wHjAtcB/wHjAtcB/wHjAtcB/wHjAtcB/wMo
-        Af8DWQHGCAABmQF4AV8B/AHfAdMBuAH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHV
-        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHeAdMBuAH/AZoBeAFfAfwBgQFuAV8BvQGbAX0BZAHz
-        AcIBrwGVAf0BnAF4AV4B/xAAAY0CjAH/EAABXgFjAWUB4gEyAZMB0AH/ATEBkgHPAf8BXAJhAdYDIwEz
-        AyMBMwMZASMIAAMEAQUBVAFgAXEBtQFjAYUBvAH0AaMBzQH+Af8BowHOAv8BowHOAv8BowHOAv8BowHO
-        Av8BowHNAf4B/wFgAYMBvQH2AVYBYQFzAbcDBAEFEAADQgFzAd4C1gH/AdUCzQH/Ac4CxwH/AcwCxgH/
-        AcoCxAH/AcgCwgH/AcYCwQH/AdACyQH/AdsC0gH/AysB/wNZAcMIAAGcAXgBXgH/AeAB1QG6Af8B4AHV
+        AyMBMwMjATMDIwEzAxkBIwwAAzgBWwMGAQcYAAMGAQcDOAFbsAABWQJaAcABNgGUAdAB/wE1AZIBzwH/
+        ATUBkgHOAf8BNAGSAc8B/wE0AZQB0AH/AVkCWgHADAABWQFkAXMByAFUAXABngHsAz0BZwMDAQQIAAQC
+        AjUBNgFWAVMBbQGZAekBVwFiAXIBxxQAAzABSwNdAckDXQHoA10B6ANdAegDXQHoA10B6ANdAegDXQHo
+        A10B6ANdAckDMAFLbAABMQGTAdEB/wGpAfkC/wGPAfAC/wGPAe8C/wGNAfAC/wHSA/8BNAGUAdAB/wwA
+        AVABUwFWAZwBaQGVAdMB/wFcAX0BsQH0AVcBbwGUAeYCNgE3AVkDNgFYAVYBbAGOAeMBXAF8Aa8B8gFp
+        AZUB0wH/AVABUwFWAZwUAANZAcADSQH2AyEB/wMgAf8DIAH/AyAB/wMgAf8DIAH/AyAB/wMhAf8DSQH2
+        A1kBwFgAAyMBMwMjATMDIwEzAyMBMwMjATMBKQGQAdEB/wG3AfMC/wFtAeAB/QH/AW0B4AH9Af8BbAHg
+        Af4B/wHaAf4C/wExAZIBzwH/DAADPgFpAWoBiQG5AfUBowHOAv8BjAG2Ae0B/wFcAXwBrQHzAVwBfAGt
+        AfMBiwG2Ae0B/wGjAc4C/wFqAYkBuQH1Az4BaRQAA1sB0AMPAf8DBQH/AwUB/wMFAf8DBQH/AwUB/wMF
+        Af8DBQH/AwoB/wMkAf8DWwHQCAADFwEfAXUBaAFeAccBlwF5AV8B/AGcAXgBXgH/AZwBeAFeAf8BnAF4
+        AV4B/wGcAXgBXgH/AZwBeAFeAf8BnAF4AV4B/wGXAXkBXwH8AXQBZgFfAcYDFgEeDAADKgE+EAABjQKM
+        Af8BjQKMAf8BjQKMAf8BjQKMAf8BjQKMAf8BJgGPAdIB/wHOAfcC/wG1Ae4B/gH/AdsB+QL/Ad0B+wL/
+        AeID/wEzAZQB0AH/DAADKQE+AVsBeQGnAfABowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHO
+        Av8BWwF5AacB8AMpAT4UAANSAaABwQK1Af8B6wLbAf8B6wLbAf8B6wLbAf8B6wLbAf8B6wLbAf8B6wLb
+        Af8B6wLbAf8BwQK1Af8DJQH/A1sByggAAXYBaQFfAcgBvAGlAYgB/AHfAdMBuAH/AeAB1QG6Af8B4AHV
+        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/Ad8B0wG4Af8BuwGiAYcB/AF1AWgBXgHH
+        BAADJgE3AXIBZgFdAcABnAF4AV4B/xAAAY0CjAH/EAABKgGSAdMB/wHcAf0C/wHaAfsC/wEqAY0BzQH/
+        AS8BkQHOAf8BMwGUAdAB/wNVAa4MAAMRARYBUQF1Aa8B+AGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGj
+        Ac4C/wGjAc4C/wFRAXUBrwH4AxEBFhQAA0IBdAHkAtgB/wHjAtcB/wHjAtcB/wHjAtcB/wHjAtcB/wHj
+        AtcB/wHjAtcB/wHjAtcB/wHjAtcB/wMoAf8DWQHGCAABlgF4AV8B/AHfAdMBuAH/AeAB1QG6Af8B4AHV
+        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHeAdMBuAH/
+        AZcBeAFfAfwBcAFmAV0BvQGXAXoBYwHzAb8BrwGVAf0BnAF4AV4B/xAAAY0CjAH/EAABXgFjAWUB4gEy
+        AZMB0AH/ATEBkgHPAf8BXAJhAdYDIwEzAyMBMwMZASMIAAMEAQUBVgFbAWMBtQFkAYEBtQH0AaMBzQH+
+        Af8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHNAf4B/wFgAX8BtQH2AVgBXQFnAbcDBAEFEAADQgFz
+        Ad4C1gH/AdUCzQH/Ac4CxwH/AcwCxgH/AcoCxAH/AcgCwgH/AcYCwQH/AdACyQH/AdsC0gH/AysB/wNZ
+        AcMIAAGcAXgBXgH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
+        AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8BnAF4AV4B/wG+Aa0BkgH9Ad4B0wG4Af8B4AHV
+        AboB/wGcAXgBXgH/EAABjQKMAf8QAANWAbIBNAGTAc8B/wE0AZEBzgH/ATQBkgHOAf8BNAGSAc8B/wE0
+        AZQB0AH/A1kBvgQAAwUBBgFXAV0BZwG4AV0BgwG1AfUBoAHLAf0B/wGjAc4C/wGjAc4C/wGjAc4C/wGj
+        Ac4C/wGjAc4C/wGjAc4C/wGhAcwB/QH/AWABhQG3AfUBVwFgAWsBvgMGAQgMAANAAXEB3gLcAf8BHAIb
+        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMXAf8B0gLMAf8DLgH/A1kBwAgAAZwBeAFeAf8B4AHVAboB/wHg
+        AdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6
+        Af8B4AHVAboB/wGcAXgBXgH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AZwBeAFeAf8DHAEnAyMBMwMj
+        ATMDIwEzAY0CjAH/AyMBMwMgAS4IAAEyAZMB0QH/AakB+QL/AY8B8AL/AY8B7wL/AY0B8AL/AdID/wE0
+        AZQB0AH/AwUBBgFWAV0BaAG6AV4BhAG2AfUBoQHLAf0B/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGj
+        Ac4C/wGjAc4C/wGjAc4C/wGjAc4C/wGhAcsB/gH/AWMBhAG4AfYBWAFgAWwBwAMGAQgDSwGNA0ABcANO
+        AZQD5AH/AwIB/wEAATUBlgH/AQABNQGWAf8BAAE4AZkB/wEAAagBvgH/AQABPwGeAf8DAgH/AcoCxwH/
+        AzEB/wNXAbwIAAGcAXgBXgH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHg
+        AdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8BnAF4AV4B/wHgAdUBugH/AeAB1QG6
+        Af8B4AHVAboB/wGcAXgBXgH/A10B0QE5AZcB0QH/ATYBlAHQAf8BMgGSAdAB/wEvAZEB0AH/ATEBkgHR
+        Af8BXQFoAXAB7AMjATMDIwEzASoBkAHRAf8BtwHzAv8BbQHgAf0B/wFtAeAB/QH/AWwB4AH+Af8B2gH+
+        Av8BMQGSAc8B/wFJAUoBTAGIAU8BdAGuAfgBUwFxAaoB9QFbAXoBpQHvAWkBiQG5AfUBeQGkAd8B/wGa
+        AcUB+AH/AaMBzgL/AaMBzgL/AZoBxQH4Af8BeQGkAd8B/wFpAYkBuQH1AVsBegGlAe8BUwFxAaoB9QFP
+        AXQBrgH4AUkBSgFMAYgDVwG5A2AB2wOeAf8D5gH/Aw0B/wEAARwBPgH/AQABJwGIAf8BAAE8AZoB/wEY
+        AdoB5wH/AQABqwHFAf8DDQH/A8UB/wM0Af8DVwG5CAABnAF4AV4B/wHgAdUBugH/AeAB1QG6Af8B4AHV
         AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
-        AeAB1QG6Af8BnAF4AV4B/wHBAa0BkgH9Ad4B0wG4Af8B4AHVAboB/wGcAXgBXgH/EAABjQKMAf8QAANW
-        AbIBNAGTAc8B/wE0AZEBzgH/ATQBkgHOAf8BNAGSAc8B/wE0AZQB0AH/A1kBvgQAAwUBBgFUAWEBdAG4
-        AV4BhQG7AfUBoAHLAf0B/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGhAcwB/QH/
-        AWEBhwG9AfUBVgFkAXgBvgMGAQgMAANAAXEB3gLcAf8BHAIbAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMX
-        Af8B0gLMAf8DLgH/A1kBwAgAAZwBeAFeAf8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHg
-        AdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wGcAXgBXgH/AeAB1QG6
-        Af8B4AHVAboB/wHgAdUBugH/AZwBeAFeAf8DHAEnAyMBMwMjATMDIwEzAY0CjAH/AyMBMwMgAS4IAAEy
-        AZMB0QH/AakB+QL/AY8B8AL/AY8B7wL/AY0B8AL/AdID/wE0AZQB0AH/AwUBBgFVAWIBdQG6AV8BhgG8
-        AfUBoQHLAf0B/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGh
-        AcsB/gH/AWMBiAHAAfYBVgFkAXoBwAMGAQgDSwGNA0ABcANOAZQD5AH/AwIB/wEAATUBlgH/AQABNQGW
-        Af8BAAE4AZkB/wEAAagBvgH/AQABPwGeAf8DAgH/AcoCxwH/AzEB/wNXAbwIAAGcAXgBXgH/AeAB1QG6
-        Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHg
-        AdUBugH/AeAB1QG6Af8BnAF4AV4B/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wGcAXgBXgH/A10B0QE5
-        AZcB0QH/ATYBlAHQAf8BMgGSAdAB/wEvAZEB0AH/ATEBkgHRAf8BXAFpAXEB7AMjATMDIwEzASoBkAHR
-        Af8BtwHzAv8BbQHgAf0B/wFtAeAB/QH/AWwB4AH+Af8B2gH+Av8BMQGSAc8B/wFJAUwBUgGIAU0BdAGz
-        AfgBUQF0AbEB9QFbAX4BrwHvAWkBjAHCAfUBeQGkAd8B/wGaAcUB+AH/AaMBzgL/AaMBzgL/AZoBxQH4
-        Af8BeQGkAd8B/wFpAYwBwgH1AVsBfgGvAe8BUQF0AbEB9QFNAXQBswH4AUkBTAFSAYgDVwG5A2AB2wOe
-        Af8D5gH/Aw0B/wEAARwBPgH/AQABJwGIAf8BAAE8AZoB/wEYAdoB5wH/AQABqwHFAf8DDQH/A8UB/wM0
-        Af8DVwG5CAABnAF4AV4B/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHV
-        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AZwBeAFeAf8BwQGtAZIB/QHeAdMBuAH/
-        AeAB1QG6Af8BnAF4AV4B/wE5AZcB0QH/AUoBpgHZAf8BggHjAf0B/wGGAesC/wGDAeoC/wGFAewC/wFH
-        AbMB5AH/AY0CjAH/AY0CjAH/AScBkAHSAf8BzgH3Av8BtQHuAf4B/wHbAfkC/wHdAfsC/wHiA/8BMwGU
-        AdAB/wgAAxUBHAIrASwBQgE9AT4BQAFnAVQBYAF0AbgBZgGPAcUB9gGjAc4C/wGjAc4C/wFmAY4BxQH2
-        AVQBYAF0AbgBPQE+AUABZwIrASwBQgMVARwIAANYAbcD6wH/A7kB/wPqAf8DGQH/AgABEAH/AQABigGr
-        Af8BAAHBAd4B/wEsAfwB/gH/AQEB2AHvAf8DGQH/A+AB/wM3Af8DWAG3CAABmQF4AV8B/AHfAdMBuAH/
-        AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHV
-        AboB/wHeAdMBuAH/AZoBeQFfAfwBgQFuAV8BvQGbAX0BZAHzAcIBrwGVAf0BnAF4AV4B/wE2AZUB0AH/
-        AaAB5QH7Af8BPgGnAd0B/wHdAfoC/wHaAfkC/wHbAfoC/wHdAfwC/wFdAl8BzgQAASwBkgHSAf8B3AH9
-        Av8B2gH7Av8BKgGNAc0B/wEvAZEBzgH/ATMBlAHQAf8DVgGwFAADDAEQAVABcwGuAfQBlwHCAfYB/wGY
-        AcMB9wH/AVABcwGtAfQDDgESFAADVQG0A/IB/wO/Af8D5wH/AyUB/wEAAY8BrwH/AQABugHcAf8BAAG9
-        Ad4B/wEAAcoB5AH/AQABvwHfAf8DJQH/A+cB/wM6Af8DVQG0A1UBtANJAYcBhgFxAWAByQG+AagBjAH8
-        Ad8B0wG4Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B3wHT
-        AbgB/wG+AagBiwH8AYUBcAFgAccEAAErASkBKAE3AYMBbwFgAcABnAF4AV4B/wEzAZMBzwH/AcEB9wL/
-        AUcBtQHlAf8BJQGJAcoB/wElAYoBywH/ASgBjAHMAf8BLwGSAc8B/wE1AZcB0wH/BAADVQGsATMBlAHQ
-        Af8BMwGUAdAB/wFSAlQBqCQAAUoBTgFTAYkBZwGPAcYB9gFrAY4BxwH3AUoBTgFTAYkYAANWAbID9wH/
-        A8oB/wP3Af8DLwH/AQABrgHQAf8BAAGuAdAB/wEAAa4B0AH/AQABrwHQAf8BAAGuAdAB/wMvAf8D8AH/
-        A4EB/wNWAbIDZQHsA1YBsgEZAhgBHwGIAXABYAHJAZkBeAFfAfwBnAF4AV4B/wGcAXgBXgH/AZwBeAFe
-        Af8BnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BmQF4AV8B/AGGAXABYQHIAhgBFwEeDAABMAEuASwBPgEx
-        AZIBzwH/AdIB+QL/AbYB8AL/AdwB/QL/Ad8D/wHlA/8BNAGVAdAB/zwAAw4BEgFPAXEBsAH1AU8BcQGw
+        AZwBeAFeAf8BvgGtAZIB/QHeAdMBuAH/AeAB1QG6Af8BnAF4AV4B/wE5AZcB0QH/AUoBpgHZAf8BggHj
+        Af0B/wGGAesC/wGDAeoC/wGFAewC/wFHAbMB5AH/AY0CjAH/AY0CjAH/AScBkAHSAf8BzgH3Av8BtQHu
+        Af4B/wHbAfkC/wHdAfsC/wHiA/8BMwGUAdAB/wgAAxUBHAMrAUIDPQFnAVcBXAFnAbgBZAGMAb0B9gGj
+        Ac4C/wGjAc4C/wFkAYsBvQH2AVcBXAFnAbgDPQFnAysBQgMVARwIAANYAbcD6wH/A7kB/wPqAf8DGQH/
+        AgABEAH/AQABigGrAf8BAAHBAd4B/wEsAfwB/gH/AQEB2AHvAf8DGQH/A+AB/wM3Af8DWAG3CAABlgF4
+        AV8B/AHfAdMBuAH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
+        AeAB1QG6Af8B4AHVAboB/wHeAdMBuAH/AZcBeQFfAfwBcAFmAV0BvQGXAXoBYwHzAb8BrwGVAf0BnAF4
+        AV4B/wE2AZUB0AH/AaAB5QH7Af8BPgGnAd0B/wHdAfoC/wHaAfkC/wHbAfoC/wHdAfwC/wFdAl8BzgQA
+        ASwBkgHSAf8B3AH9Av8B2gH7Av8BKgGNAc0B/wEvAZEBzgH/ATMBlAHQAf8DVgGwFAADDAEQAVIBcQGn
+        AfQBlwHCAfYB/wGYAcMB9wH/AVIBcQGnAfQDDgESFAADVQG0A/IB/wO/Af8D5wH/AyUB/wEAAY8BrwH/
+        AQABugHcAf8BAAG9Ad4B/wEAAcoB5AH/AQABvwHfAf8DJQH/A+cB/wM6Af8DVQG0A1UBtANJAYcBdwFp
+        AV8ByQG8AaUBiQH8Ad8B0wG4Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
+        AeAB1QG6Af8B3wHTAbgB/wG8AaUBiAH8AXUBaAFeAccEAAMmATcBcgFmAV0BwAGcAXgBXgH/ATMBkwHP
+        Af8BwQH3Av8BRwG1AeUB/wElAYkBygH/ASUBigHLAf8BKAGMAcwB/wEvAZIBzwH/ATUBlwHTAf8EAANV
+        AawBMwGUAdAB/wEzAZQB0AH/AVICVAGoJAABSgFLAU0BiQFlAYwBvgH2AWwBjAHCAfcBSgFLAU0BiRgA
+        A1YBsgP3Af8DygH/A/cB/wMvAf8BAAGuAdAB/wEAAa4B0AH/AQABrgHQAf8BAAGvAdAB/wEAAa4B0AH/
+        Ay8B/wPwAf8DgQH/A1YBsgNlAewDVgGyAxcBHwF3AWgBXwHJAZYBeAFfAfwBnAF4AV4B/wGcAXgBXgH/
+        AZwBeAFeAf8BnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BlgF4AV8B/AF2AWkBXwHIAxYBHgwAAyoBPgEx
+        AZIBzwH/AdIB+QL/AbYB8AL/AdwB/QL/Ad8D/wHlA/8BNAGVAdAB/zwAAw4BEgFRAXABqQH1AVEBcAGp
         AfUDDgESGAADVQGvA2EB2gPEAf8D/AH/A4oB/wM3Af8DNwH/AzcB/wM3Af8DNwH/A4oB/wP4Af8DiQH/
         AzYB/wOdAf8DVQGvQAABMwGUAdAB/wHcAf0C/wHaAfsC/wErAY8BzQH/ATABkgHPAf8BNAGVAdAB/wNV
-        Aa9AAAFLAU8BVQGMAUsBTgFUAYscAANHAYIDPQFnA0sBjQT/A8sB/wP+Af8D/gH/A/4B/wP+Af8D/gH/
-        A8sB/wP+Af8DnAH/A1UBrQNhAesDVQGtQAABWAFoAXUB7wEzAZQB0AH/ATMBlAHQAf8BXAFlAWwB50wA
+        Aa9AAAFLAUwBTgGMAUsBTAFNAYscAANHAYIDPQFnA0sBjQT/A8sB/wP+Af8D/gH/A/4B/wP+Af8D/gH/
+        A8sB/wP+Af8DnAH/A1UBrQNhAesDVQGtQAABWQFnAXMB7wEzAZQB0AH/ATMBlAHQAf8BXAFlAWsB50wA
         Aw8BEwMPARMkAAMxAU0DPAFmAzwBZgM8AWYDPAFmAzwBZgM8AWYDPAFmAzwBZgM8AWYDVQGsA0YBgQNV
         AawDRgGBQAABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/4EAAf8BgALnBf8BgAHh
         AYcBwAEDA/8BgAHgAQcBwAEDAv8B8AEAAeABBwHAAQMBAAEOAfABAAHgAQcBwAEDAQABCAH3AYAB4AEH
@@ -254,4 +253,53 @@
   <metadata name="ttTabs.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>129, 17</value>
   </metadata>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>328, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD6
+        CAAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0UAAf8B8AH3Ao0B9wHw
+        Af8FAA5yJAAB8wHtAbUBvALxAbwBtQHtAfMEAAFyDAgBciMAAfMB7QG8Bt0BvAHtAfMDAAFyDAgBciIA
+        Af8B7QG8CN0BvAHtAf8CAAFyDAgBciIAAfABtQrdAbUB8AIAAXIBmAsIAXIiAAG1AbwK3QG8AfcCAAKR
+        AZ0FCAGYApEBmAEIAXIiAAGNAfEK3QHxAY0CAAGtAdwBtAFyApgBnQFyAZECuwKRAXIiAAGNAfEK3QHx
+        AY0CAAGtAtwBuwKRAbQF3AG7AZEiAAH3AbwK3QG8AfcCAAEJAbQL3AGtIgAB8AG1Ct0BtQHwAgAB/wG1
+        AbQK3AGtIgAB/wHtAbwI3QG8Ae0B/wMAAf8CtAPcBLQC3AGtIwAB8wHtAbwG3QG8Ae0B8wUAAfQEtAEJ
+        AfQB8wK0AdwBrSQAAfMB7QG1AbwC8QG8AbUB7QHzBwAB8QG0AfIB/wMAAf8B8AG0Aa0lAAH/AfAB9wKN
+        AfcB8AH/EQAB9QG7YQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEABP8EAAHw
+        AQ8BgAEBBAAB4AEHAYABAQQAAcABAwGAAQEEAAGAAQEBgAEBBAABgAEBAYABAQQAAYABAQGAAQEEAAGA
+        AQEBgAEBBAABgAEBAYABAQQAAYABAQGAAQEEAAGAAQEBgAEBBAABgAEBAcABAQQAAcABAwHgAQEEAAHg
+        AQcB8AHhBAAB8AEPAf8B+QQABP8EAAs=
+</value>
+  </data>
 </root>
