--- a/Kinovea/Properties/Resources.resx
+++ b/Kinovea/Properties/Resources.resx
@@ -268,6 +268,9 @@
   <data name="rename_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rename-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shortcut2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortcut2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="sleep_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sleep-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
