Fix synchronization of camera icons and alias between instances.
Improved icon picker.

--- a/Kinovea.FileBrowser/UserInterface/FileBrowserUserInterface.resx
+++ b/Kinovea.FileBrowser/UserInterface/FileBrowserUserInterface.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="tabPageShortcuts.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="imgListFiles.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>212, 17</value>
   </metadata>
@@ -125,7 +128,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC4
-        BwAAAk1TRnQBSQFMAwEBAAE4AQIBOAECARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        BwAAAk1TRnQBSQFMAwEBAAFoAQIBaAECARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
         AUADAAEQAwABAQEAAQgGAAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
         AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
         AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
@@ -161,9 +164,6 @@
         Cw==
 </value>
   </data>
-  <metadata name="tabPageShortcuts.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <metadata name="imgListTabs.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -171,135 +171,85 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACo
-        EQAAAk1TRnQBSQFMAgEBBAEAAUABAgFAAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABa
+        EQAAAk1TRnQBSQFMAgEBBAEAAXABAgFwAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8ARgADGQQjATMDIwEz
         AyMBMwMjATMDIwEzAxkBIwwAAzgBWwMGAQcYAAMGAQcDOAFbsAABWQJaAcABNgGUAdAB/wE1AZIBzwH/
-        ATUBkgHOAf8BNAGSAc8B/wE0AZQB0AH/AVkCWgHADAABXAFfAWQByAFaAW4BjwHsAz0BZwMDAQQIAAQC
-        AzUBVgFZAWsBiQHpAVoBXQFkAccUAAMwAUsDXQHJA2AB6ANgAegDYAHoA2AB6ANgAegDYAHoA2AB6ANg
-        AegDXQHJAzABS2wAATEBkwHRAf8BqQH5Av8BjwHwAv8BjwHvAv8BjQHwAv8B0gP/ATQBlAHQAf8MAAFQ
-        AlEBnAFpAZUB0wH/AVwBegGkAfQBWgFqAYMB5gM2AVkDNgFYAVoBZwF+AeMBXAF5AaAB8gFpAZUB0wH/
-        AVACUQGcFAADWQHAA0kB9gMhAf8DIAH/AyAB/wMgAf8DIAH/AyAB/wMgAf8DIQH/A0kB9gNZAcBYAAMj
-        ATMDIwEzAyMBMwMjATMDIwEzASkBkAHRAf8BtwHzAv8BbQHgAf0B/wFtAeAB/QH/AWwB4AH+Af8B2gH+
-        Av8BMQGSAc8B/wwAAz4BaQFqAYUBrQH1AaMBzgL/AYwBtgHtAf8BXgF2AaAB8wFeAXYBoAHzAYsBtgHt
-        Af8BowHOAv8BagGFAa0B9QM+AWkUAANbAdADDwH/AwUB/wMFAf8DBQH/AwUB/wMFAf8DBQH/AwUB/wMK
-        Af8DJAH/A1sB0AgAAxcBHwFlAV8BXQHHAZEBeQFfAfwBnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BnAF4
-        AV4B/wGcAXgBXgH/AZwBeAFeAf8BkQF5AV8B/AFkAV8BXQHGAxYBHgwAAykBPhAAAY0CjAH/AY0CjAH/
-        AY0CjAH/AY0CjAH/AY0CjAH/ASYBjwHSAf8BzgH3Av8BtQHuAf4B/wHbAfkC/wHdAfsC/wHiA/8BMwGU
-        AdAB/wwAAykBPgFdAXUBmAHwAaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AV0BdQGY
-        AfADKQE+FAADUgGgAcECtQH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/
-        AcECtQH/AyUB/wNbAcoIAAFnAWEBXwHIAbgBnwGCAfwB3wHTAbgB/wHgAdUBugH/AeAB1QG6Af8B4AHV
-        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHfAdMBuAH/AbcBnAGBAfwBZQFfAV0BxwQAAyUBNwFi
-        AV0BWwHAAZwBeAFeAf8QAAGNAowB/xAAASoBkgHTAf8B3AH9Av8B2gH7Av8BKgGNAc0B/wEvAZEBzgH/
-        ATMBlAHQAf8DVQGuDAADEQEWAVUBdQGlAfgBowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHO
-        Av8BVQF1AaUB+AMRARYUAANCAXQB5ALYAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLX
-        Af8B4wLXAf8B4wLXAf8DKAH/A1kBxggAAZABeAFfAfwB3wHTAbgB/wHgAdUBugH/AeAB1QG6Af8B4AHV
-        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B3gHTAbgB/wGRAXgBXwH8
-        AWEBXgFaAb0BjgF0AWEB8wG+Aa8BlQH9AZwBeAFeAf8QAAGNAowB/xAAAV4BYwFlAeIBMgGTAdAB/wEx
-        AZIBzwH/AVwCYQHWAyMBMwMjATMDGQEjCAADBAEFAVYBVwFZAbUBZAF7AacB9AGjAc0B/gH/AaMBzgL/
-        AaMBzgL/AaMBzgL/AaMBzgL/AaMBzQH+Af8BYAF7AasB9gFYAVoBXQG3AwQBBRAAA0IBcwHeAtYB/wHV
-        As0B/wHOAscB/wHMAsYB/wHKAsQB/wHIAsIB/wHGAsEB/wHQAskB/wHbAtIB/wMrAf8DWQHDCAABnAF4
+        ATUBkgHOAf8BNAGSAc8B/wE0AZQB0AH/AVkCWgHADAABXAJfAcgBXQFoAXUB7AM9AWcDAwEECAAEAgM1
+        AVYBWgFkAW8B6QFaAl0BxxQAAzABSwNdAckDYAHoA2AB6ANgAegDYAHoA2AB6ANgAegDYAHoA2AB6ANd
+        AckDMAFLbAABMQGTAdEB/wGpAfkC/wGPAfAC/wGPAe8C/wGNAfAC/wHSA/8BNAGUAdAB/wwAAVACUQGc
+        AWkBlQHTAf8BXAF0AYoB9AFhAWoBbAHmAzYBWQM2AVgBYAFlAWcB4wFcAXEBhQHyAWkBlQHTAf8BUAJR
+        AZwUAANZAcADSQH2AyEB/wMgAf8DIAH/AyAB/wMgAf8DIAH/AyAB/wMhAf8DSQH2A1kBwFgAAyMBMwMj
+        ATMDIwEzAyMBMwMjATMBKQGQAdEB/wG3AfMC/wFtAeAB/QH/AW0B4AH9Af8BbAHgAf4B/wHaAf4C/wEx
+        AZIBzwH/DAADPgFpAWoBdgGOAfUBowHOAv8BjAG2Ae0B/wFgAW8BhQHzAWABbwGFAfMBiwG2Ae0B/wGj
+        Ac4C/wFqAXYBjgH1Az4BaRQAA1sB0AMPAf8DBQH/AwUB/wMFAf8DBQH/AwUB/wMFAf8DBQH/AwoB/wMk
+        Af8DWwHQCAADFwEfA10BxwF/AXkBXwH8AZwBeAFeAf8BnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BnAF4
+        AV4B/wGcAXgBXgH/AX8BeQFfAfwDXAHGAxYBHgwAAykBPhAAAY0CjAH/AY0CjAH/AY0CjAH/AY0CjAH/
+        AY0CjAH/ASYBjwHSAf8BzgH3Av8BtQHuAf4B/wHbAfkC/wHdAfsC/wHiA/8BMwGUAdAB/wwAAykBPgFe
+        AWoBegHwAaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AV4BagF6AfADKQE+FAADUgGg
+        AcECtQH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AcECtQH/AyUB/wNb
+        AcoIAANfAcgBrAGNAX4B/AHfAdMBuAH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHV
+        AboB/wHgAdUBugH/Ad8B0wG4Af8BqwGKAX4B/ANdAccEAAMlATcDWwHAAZwBeAFeAf8QAAGNAowB/xAA
+        ASoBkgHTAf8B3AH9Av8B2gH7Av8BKgGNAc0B/wEvAZEBzgH/ATMBlAHQAf8DVQGuDAADEQEWAVwBdQGW
+        AfgBowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BXAF1AZYB+AMRARYUAANCAXQB5ALY
+        Af8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8DKAH/A1kBxggA
+        AX4BeAFfAfwB3wHTAbgB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHV
+        AboB/wHgAdUBugH/AeAB1QG6Af8B3gHTAbgB/wF/AXgBXwH8A1oBvQF+AW8BYAHzAb4BrwGVAf0BnAF4
+        AV4B/xAAAY0CjAH/EAABXgFjAWUB4gEyAZMB0AH/ATEBkgHPAf8BXAJhAdYDIwEzAyMBMwMZASMIAAME
+        AQUBVgJXAbUBZAF1AYwB9AGjAc0B/gH/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzQH+Af8BYAF1
+        AZAB9gFYAloBtwMEAQUQAANCAXMB3gLWAf8B1QLNAf8BzgLHAf8BzALGAf8BygLEAf8ByALCAf8BxgLB
+        Af8B0ALJAf8B2wLSAf8DKwH/A1kBwwgAAZwBeAFeAf8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHV
+        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wGcAXgBXgH/
+        Ab4BrQGSAf0B3gHTAbgB/wHgAdUBugH/AZwBeAFeAf8QAAGNAowB/xAAA1YBsgE0AZMBzwH/ATQBkQHO
+        Af8BNAGSAc4B/wE0AZIBzwH/ATQBlAHQAf8DWQG+BAADBQEGA1gBuAFaAXABigH1AaABywH9Af8BowHO
+        Av8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BoQHMAf0B/wFaAXEBjQH1AVkCXAG+AwYBCAwA
+        A0ABcQHeAtwB/wEcAhsB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AxcB/wHSAswB/wMuAf8DWQHACAABnAF4
         AV4B/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
-        AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AZwBeAFeAf8BvgGtAZIB/QHeAdMBuAH/AeAB1QG6Af8BnAF4
-        AV4B/xAAAY0CjAH/EAADVgGyATQBkwHPAf8BNAGRAc4B/wE0AZIBzgH/ATQBkgHPAf8BNAGUAdAB/wNZ
-        Ab4EAAMFAQYBWAFZAVwBuAFbAX8BqAH1AaABywH9Af8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHO
-        Av8BowHOAv8BoQHMAf0B/wFeAYEBqgH1AVkBXAFgAb4DBgEIDAADQAFxAd4C3AH/ARwCGwH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DFwH/AdICzAH/Ay4B/wNZAcAIAAGcAXgBXgH/AeAB1QG6Af8B4AHVAboB/wHg
+        AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AZwBeAFeAf8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8BnAF4
+        AV4B/wMcAScDIwEzAyMBMwMjATMBjQKMAf8DIwEzAyABLggAATIBkwHRAf8BqQH5Av8BjwHwAv8BjwHv
+        Av8BjQHwAv8B0gP/ATQBlAHQAf8DBQEGAVgCWgG6AVoBcQGMAfUBoQHLAf0B/wGjAc4C/wGjAc4C/wGj
+        Ac4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGhAcsB/gH/AWMBdgGRAfYBWQJbAcADBgEI
+        A0sBjQNAAXADTgGUA+QB/wMCAf8BAAE1AZYB/wEAATUBlgH/AQABOAGZAf8BAAGoAb4B/wEAAT8BngH/
+        AwIB/wHKAscB/wMxAf8DVwG8CAABnAF4AV4B/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
+        AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AZwBeAFeAf8B4AHV
+        AboB/wHgAdUBugH/AeAB1QG6Af8BnAF4AV4B/wNdAdEBOQGXAdEB/wE2AZQB0AH/ATIBkgHQAf8BLwGR
+        AdAB/wExAZIB0QH/AV0BZQFoAewDIwEzAyMBMwEqAZAB0QH/AbcB8wL/AW0B4AH9Af8BbQHgAf0B/wFs
+        AeAB/gH/AdoB/gL/ATEBkgHPAf8DSQGIAVwBdAGWAfgBWgFuAYcB9QFbAWkBdwHvAWkBdgGOAfUBeQGk
+        Ad8B/wGaAcUB+AH/AaMBzgL/AaMBzgL/AZoBxQH4Af8BeQGkAd8B/wFpAXYBjgH1AVsBaQF3Ae8BWgFu
+        AYcB9QFcAXQBlgH4A0kBiANXAbkDYAHbA54B/wPmAf8DDQH/AQABHAE+Af8BAAEnAYgB/wEAATwBmgH/
+        ARgB2gHnAf8BAAGrAcUB/wMNAf8DxQH/AzQB/wNXAbkIAAGcAXgBXgH/AeAB1QG6Af8B4AHVAboB/wHg
         AdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6
-        Af8BnAF4AV4B/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wGcAXgBXgH/AxwBJwMjATMDIwEzAyMBMwGN
-        AowB/wMjATMDIAEuCAABMgGTAdEB/wGpAfkC/wGPAfAC/wGPAe8C/wGNAfAC/wHSA/8BNAGUAdAB/wMF
-        AQYBWAFaAV0BugFcAYABqQH1AaEBywH9Af8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHO
-        Av8BowHOAv8BowHOAv8BoQHLAf4B/wFjAX0BrQH2AVkBWwFgAcADBgEIA0sBjQNAAXADTgGUA+QB/wMC
-        Af8BAAE1AZYB/wEAATUBlgH/AQABOAGZAf8BAAGoAb4B/wEAAT8BngH/AwIB/wHKAscB/wMxAf8DVwG8
-        CAABnAF4AV4B/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHg
-        AdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AZwBeAFeAf8B4AHVAboB/wHgAdUBugH/AeAB1QG6
-        Af8BnAF4AV4B/wNdAdEBOQGXAdEB/wE2AZQB0AH/ATIBkgHQAf8BLwGRAdAB/wExAZIB0QH/AV0BZgFu
-        AewDIwEzAyMBMwEqAZAB0QH/AbcB8wL/AW0B4AH9Af8BbQHgAf0B/wFsAeAB/gH/AdoB/gL/ATEBkgHP
-        Af8DSQGIAVMBdAGkAfgBVgFvAZ8B9QFbAXQBlQHvAWkBhQGtAfUBeQGkAd8B/wGaAcUB+AH/AaMBzgL/
-        AaMBzgL/AZoBxQH4Af8BeQGkAd8B/wFpAYUBrQH1AVsBdAGVAe8BVgFvAZ8B9QFTAXQBpAH4A0kBiANX
-        AbkDYAHbA54B/wPmAf8DDQH/AQABHAE+Af8BAAEnAYgB/wEAATwBmgH/ARgB2gHnAf8BAAGrAcUB/wMN
-        Af8DxQH/AzQB/wNXAbkIAAGcAXgBXgH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHV
-        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8BnAF4AV4B/wG+Aa0BkgH9
-        Ad4B0wG4Af8B4AHVAboB/wGcAXgBXgH/ATkBlwHRAf8BSgGmAdkB/wGCAeMB/QH/AYYB6wL/AYMB6gL/
-        AYUB7AL/AUcBswHkAf8BjQKMAf8BjQKMAf8BJwGQAdIB/wHOAfcC/wG1Ae4B/gH/AdsB+QL/Ad0B+wL/
-        AeID/wEzAZQB0AH/CAADFQEcAysBQgM9AWcBWAFZAVwBuAFjAYQBsAH2AaMBzgL/AaMBzgL/AWMBgwGw
-        AfYBWAFZAVwBuAM9AWcDKwFCAxUBHAgAA1gBtwPrAf8DuQH/A+oB/wMZAf8CAAEQAf8BAAGKAasB/wEA
-        AcEB3gH/ASwB/AH+Af8BAQHYAe8B/wMZAf8D4AH/AzcB/wNYAbcIAAGQAXgBXwH8Ad8B0wG4Af8B4AHV
-        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
-        Ad4B0wG4Af8BkQF5AV8B/AFhAV4BWgG9AY4BdAFhAfMBvgGvAZUB/QGcAXgBXgH/ATYBlQHQAf8BoAHl
-        AfsB/wE+AacB3QH/Ad0B+gL/AdoB+QL/AdsB+gL/Ad0B/AL/AV0CXwHOBAABLAGSAdIB/wHcAf0C/wHa
-        AfsC/wEqAY0BzQH/AS8BkQHOAf8BMwGUAdAB/wNWAbAUAAMMARABUwFtAZwB9AGXAcIB9gH/AZgBwwH3
-        Af8BUwFtAZwB9AMOARIUAANVAbQD8gH/A78B/wPnAf8DJQH/AQABjwGvAf8BAAG6AdwB/wEAAb0B3gH/
-        AQABygHkAf8BAAG/Ad8B/wMlAf8D5wH/AzoB/wNVAbQDVQG0A0kBhwFoAWMBXwHJAbgBnwGDAfwB3wHT
-        AbgB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHfAdMBuAH/
-        AbgBnwGCAfwBZQFfAV0BxwQAAyUBNwFiAV0BWwHAAZwBeAFeAf8BMwGTAc8B/wHBAfcC/wFHAbUB5QH/
-        ASUBiQHKAf8BJQGKAcsB/wEoAYwBzAH/AS8BkgHPAf8BNQGXAdMB/wQAA1UBrAEzAZQB0AH/ATMBlAHQ
-        Af8BUgJUAagkAANKAYkBYwGEAbEB9gFsAYoBtwH3A0oBiRgAA1YBsgP3Af8DygH/A/cB/wMvAf8BAAGu
-        AdAB/wEAAa4B0AH/AQABrgHQAf8BAAGvAdAB/wEAAa4B0AH/Ay8B/wPwAf8DgQH/A1YBsgNlAewDVgGy
-        AxcBHwFoAWIBXwHJAZABeAFfAfwBnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BnAF4AV4B/wGcAXgBXgH/
-        AZwBeAFeAf8BkAF4AV8B/AFnAWEBXwHIAxYBHgwAAykBPgExAZIBzwH/AdIB+QL/AbYB8AL/AdwB/QL/
-        Ad8D/wHlA/8BNAGVAdAB/zwAAw4BEgFVAW4BngH1AVUBbgGeAfUDDgESGAADVQGvA2EB2gPEAf8D/AH/
-        A4oB/wM3Af8DNwH/AzcB/wM3Af8DNwH/A4oB/wP4Af8DiQH/AzYB/wOdAf8DVQGvQAABMwGUAdAB/wHc
-        Af0C/wHaAfsC/wErAY8BzQH/ATABkgHPAf8BNAGVAdAB/wNVAa9AAANLAYwDSwGLHAADRwGCAz0BZwNL
-        AY0E/wPLAf8D/gH/A/4B/wP+Af8D/gH/A/4B/wPLAf8D/gH/A5wB/wNVAa0DYQHrA1UBrUAAAVkBZwFw
-        Ae8BMwGUAdAB/wEzAZQB0AH/AVwBZQFoAedMAAMPARMDDwETJAADMQFNAzwBZgM8AWYDPAFmAzwBZgM8
-        AWYDPAFmAzwBZgM8AWYDPAFmA1UBrANGAYEDVQGsA0YBgUAAAUIBTQE+BwABPgMAASgDAAFAAwABIAMA
-        AQEBAAEBBgABARYAA/+BAAH/AYAC5wX/AYAB4QGHAcABAwP/AYAB4AEHAcABAwL/AfABAAHgAQcBwAED
-        AQABDgHwAQAB4AEHAcABAwEAAQgB9wGAAeABBwHAAQMCAAH3AYABwAEDAcABAwIAAfcCgAEBAcABAwIA
-        AQEBgAMAAQMHAAEDBAABwAEDAQABAwMAAYAB+AEfAwABCAEAAYcB/AE/AwABDgEBAf8B/AE/AgAC/wEB
-        Af8B/gF/AgAC/wEPAf8B/gF/AcABAAL/Cw==
+        Af8BnAF4AV4B/wG+Aa0BkgH9Ad4B0wG4Af8B4AHVAboB/wGcAXgBXgH/ATkBlwHRAf8BSgGmAdkB/wGC
+        AeMB/QH/AYYB6wL/AYMB6gL/AYUB7AL/AUcBswHkAf8BjQKMAf8BjQKMAf8BJwGQAdIB/wHOAfcC/wG1
+        Ae4B/gH/AdsB+QL/Ad0B+wL/AeID/wEzAZQB0AH/CAADFQEcAysBQgM9AWcDWAG4AWMBeAGTAfYBowHO
+        Av8BowHOAv8BYwF4AZMB9gNYAbgDPQFnAysBQgMVARwIAANYAbcD6wH/A7kB/wPqAf8DGQH/AgABEAH/
+        AQABigGrAf8BAAHBAd4B/wEsAfwB/gH/AQEB2AHvAf8DGQH/A+AB/wM3Af8DWAG3CAABfgF4AV8B/AHf
+        AdMBuAH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6
+        Af8B4AHVAboB/wHeAdMBuAH/AX8BeQFfAfwDWgG9AX4BbwFgAfMBvgGvAZUB/QGcAXgBXgH/ATYBlQHQ
+        Af8BoAHlAfsB/wE+AacB3QH/Ad0B+gL/AdoB+QL/AdsB+gL/Ad0B/AL/AV0CXwHOBAABLAGSAdIB/wHc
+        Af0C/wHaAfsC/wEqAY0BzQH/AS8BkQHOAf8BMwGUAdAB/wNWAbAUAAMMARABUwFoAYUB9AGXAcIB9gH/
+        AZgBwwH3Af8BUwFoAYUB9AMOARIUAANVAbQD8gH/A78B/wPnAf8DJQH/AQABjwGvAf8BAAG6AdwB/wEA
+        Ab0B3gH/AQABygHkAf8BAAG/Ad8B/wMlAf8D5wH/AzoB/wNVAbQDVQG0A0kBhwNfAckBrAGNAX4B/AHf
+        AdMBuAH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/Ad8B0wG4
+        Af8BrAGNAX4B/ANdAccEAAMlATcDWwHAAZwBeAFeAf8BMwGTAc8B/wHBAfcC/wFHAbUB5QH/ASUBiQHK
+        Af8BJQGKAcsB/wEoAYwBzAH/AS8BkgHPAf8BNQGXAdMB/wQAA1UBrAEzAZQB0AH/ATMBlAHQAf8BUgJU
+        AagkAANKAYkBYwF4AZQB9gFsAYQBnwH3A0oBiRgAA1YBsgP3Af8DygH/A/cB/wMvAf8BAAGuAdAB/wEA
+        Aa4B0AH/AQABrgHQAf8BAAGvAdAB/wEAAa4B0AH/Ay8B/wPwAf8DgQH/A1YBsgNlAewDVgGyAxcBHwNf
+        AckBfgF4AV8B/AGcAXgBXgH/AZwBeAFeAf8BnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BnAF4AV4B/wF+
+        AXgBXwH8A18ByAMWAR4MAAMpAT4BMQGSAc8B/wHSAfkC/wG2AfAC/wHcAf0C/wHfA/8B5QP/ATQBlQHQ
+        Af88AAMOARIBWgFuAYcB9QFaAW4BhwH1Aw4BEhgAA1UBrwNhAdoDxAH/A/wB/wOKAf8DNwH/AzcB/wM3
+        Af8DNwH/AzcB/wOKAf8D+AH/A4kB/wM2Af8DnQH/A1UBr0AAATMBlAHQAf8B3AH9Av8B2gH7Av8BKwGP
+        Ac0B/wEwAZIBzwH/ATQBlQHQAf8DVQGvQAADSwGMA0sBixwAA0cBggM9AWcDSwGNBP8DywH/A/4B/wP+
+        Af8D/gH/A/4B/wP+Af8DywH/A/4B/wOcAf8DVQGtA2EB6wNVAa1AAAFZAmcB7wEzAZQB0AH/ATMBlAHQ
+        Af8BXAJlAedMAAMPARMDDwETJAADMQFNAzwBZgM8AWYDPAFmAzwBZgM8AWYDPAFmAzwBZgM8AWYDPAFm
+        A1UBrANGAYEDVQGsA0YBgUAAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAH/
+        AYAC5wX/AYAB4QGHAcABAwP/AYAB4AEHAcABAwL/AfABAAHgAQcBwAEDAQABDgHwAQAB4AEHAcABAwEA
+        AQgB9wGAAeABBwHAAQMCAAH3AYABwAEDAcABAwIAAfcCgAEBAcABAwIAAQEBgAMAAQMHAAEDBAABwAED
+        AQABAwMAAYAB+AEfAwABCAEAAYcB/AE/AwABDgEBAf8B/AE/AgAC/wEBAf8B/gF/AgAC/wEPAf8B/gF/
+        AcABAAL/Cw==
 </value>
   </data>
   <metadata name="ttTabs.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>129, 17</value>
   </metadata>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>328, 17</value>
-  </metadata>
-  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD6
-        CAAAAk1TRnQBSQFMAgEBAgEAARgBAAEYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0UAAf8B8AH3Ao0B9wHw
-        Af8FAA5yJAAB8wHtAbUBvALxAbwBtQHtAfMEAAFyDAgBciMAAfMB7QG8Bt0BvAHtAfMDAAFyDAgBciIA
-        Af8B7QG8CN0BvAHtAf8CAAFyDAgBciIAAfABtQrdAbUB8AIAAXIBmAsIAXIiAAG1AbwK3QG8AfcCAAKR
-        AZ0FCAGYApEBmAEIAXIiAAGNAfEK3QHxAY0CAAGtAdwBtAFyApgBnQFyAZECuwKRAXIiAAGNAfEK3QHx
-        AY0CAAGtAtwBuwKRAbQF3AG7AZEiAAH3AbwK3QG8AfcCAAEJAbQL3AGtIgAB8AG1Ct0BtQHwAgAB/wG1
-        AbQK3AGtIgAB/wHtAbwI3QG8Ae0B/wMAAf8CtAPcBLQC3AGtIwAB8wHtAbwG3QG8Ae0B8wUAAfQEtAEJ
-        AfQB8wK0AdwBrSQAAfMB7QG1AbwC8QG8AbUB7QHzBwAB8QG0AfIB/wMAAf8B8AG0Aa0lAAH/AfAB9wKN
-        AfcB8AH/EQAB/wG7YQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEABP8EAAHw
-        AQ8BgAEBBAAB4AEHAYABAQQAAcABAwGAAQEEAAGAAQEBgAEBBAABgAEBAYABAQQAAYABAQGAAQEEAAGA
-        AQEBgAEBBAABgAEBAYABAQQAAYABAQGAAQEEAAGAAQEBgAEBBAABgAEBAcABAQQAAcABAwHgAQEEAAHg
-        AQcB8AHhBAAB8AEPAf8B+QQABP8EAAs=
-</value>
-  </data>
 </root>
